# online_marketplace

./: .dockerignore  .gitignore  README.md  pyproject.toml
frontend_react/: Dockerfile  package-lock.json  package.json
frontend_react/public/: index.html
frontend_react/src/components/app/: App.js
frontend_react/src/components/cards/: Cards.js
frontend_react/src/components/changePassword/: ChangePassword.js
frontend_react/src/components/comment/: Comment.js
frontend_react/src/components/commentList/: CommentList.js
frontend_react/src/components/privateRoute/: PrivateRoute.js
frontend_react/src/components/registration/: Registration.js
frontend_react/src/components/singlePage/: SinglePage.js
frontend_react/src/context/: AuthContext.js  MainContext.js
frontend_react/src/utils/: axiosInstance.js  useAxios.js
market_postgres/: docker-compose.yaml  nginx.conf
skymarket/: .env.docker.example  .env.example  Dockerfile  pyproject.toml
skymarket/ads/: admin.py  api_views.py  filters.py  models.py  pagination.py  permissions.py  serializers.py  urls.py
skymarket/ads/migrations/: 0001_initial.py  0002_auto_20240114_2254.py  0003_auto_20240115_1216.py
skymarket/fixtures/: ad.json  comments.json  users.json
skymarket/skymarket/: settings.py  urls.py
skymarket/users/: admin.py  email.py  managers.py  models.py  serializers.py  urls.py
skymarket/users/migrations/: 0001_initial.py  0002_rename_phone_number_user_phone.py  0003_user_image.py
skymarket/users/templates/email/: password_reset_email.html
