[tool.poetry]
name = "online-marketplace"
version = "0.1.0"
description = ""
authors = ["Victor Volkov <vektorn1212@gmail.com>"]
readme = "README.md"
packages = [{include = "online_marketplace"}]

[tool.poetry.dependencies]
python = "^3.11"
asgiref = "^3.4.1"
black = "^23.12.1"
certifi = "^2023.11.17"
cffi = "^1.15.0"
charset-normalizer = "^3.3.2"
click = "^8.0.4"
coreapi = "^2.3.3"
coreschema = "^0.0.4"
cryptography = "^41.0.7"
defusedxml = "^0.7.1"
Django = "^3.2.6"
django-cors-headers = "^4.3.1"
django-filter = "^23.5"
django-phonenumber-field = "^7.3.0"
django-templated-mail = "^1.1.1"
djangorestframework = "^3.13.1"
djangorestframework-simplejwt = "^5.3.1"
djoser = "^2.2.2"
drf-nested-routers = "^0.93.4"
idna = "^3.3"
inflection = "^0.5.1"
isort = "^5.10.1"
itypes = "^1.2.0"
Jinja2 = "^3.0.3"
MarkupSafe = "^2.0.1"
mypy-extensions = "^1.0.0"
oauthlib = "^3.1.1"
packaging = "^23.2"
pathspec = "^0.12.1"
phonenumbers = "^8.12.41"
Pillow = "^9.0.0"
platformdirs = "^4.1.0"
pycparser = "^2.21"
PyJWT = "^2.3.0"
pyparsing = "^3.0.7"
python-dotenv = "^1.0.0"
python3-openid = "^3.2.0"
pytz = "^2023.3.post1"
requests = "^2.27.1"
requests-oauthlib = "^1.3.0"
six = "^1.16.0"
social-auth-app-django = "^5.4.0"
social-auth-core = "^4.2.0"
sqlparse = "^0.4.2"
tomli = "^2.0.1"
uritemplate = "^4.1.1"
urllib3 = "^2.1.0"
psycopg2-binary = "^2.9.9"
ruamel-yaml = "^0.18.5"
drf-spectacular = "^0.27.0"
whitenoise = "^6.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
